--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Quize</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <meta name="google-site-verification" content="lw6QVk42-HxMTrs6Sa49NbdMPKkjmh3rQdPYPAIy0iw" />
 <body>
     <div class="quizesection">
         <div id="quize">
